src/test/deca/context/valid/op_arith_int_float.deca
// Description :
// test d'opérations binaires entre des entiers et des flottants
//
// Résultats :
// ok

{
  float x;
  x = 1 / 1.0;
  x = 1 - 1.0;
  x = 1 * 1.0;
  x = 1 + 1.0;
}
