src/test/deca/context/invalid/op_arith_null.deca
// Description :
// test d'une opération arithmétique entre un entier et null
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Opération arithmétique entre des objets de type boolean et float impossible (règle 3.37)

{
  1 + null;
}
